--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,8 @@ dependencies {
     compile 'com.google.code.gson:gson:2.7'
     compile 'org.json:json:20160810'
     compile 'junit:junit:4.12'
+    compile 'org.apache.httpcomponents:httpcore:4.4.1'
+    compile 'org.apache.httpcomponents:httpclient:4.5'
 
     sourceCompatibility = 1.7
     targetCompatibility = 1.7
