--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,8 @@ jdk:
 before_install:
  - chmod +x gradlew
 
-#script : ./gradlew assemble
+install:
+  - true
 
-#before_cache:
-#  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
-#  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
-#cache:
-#  directories:
-#    - $HOME/.gradle/caches/
-#    - $HOME/.gradle/wrapper/ 
+script:
+  - ./gradlew assemble
