--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 /build
 /coverage/
-/ethereum-java.iml.iml
+/ethereum-java.iml
 /local.properties
-/gradle/
 /.idea/
 .gradle/
 /blockchain-web3J.iml
