--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,8 @@ jdk:
 
 script:
   - ./gradlew assemble
+
+notifications:
+  slack:
+      rooms:
+        - sqlinantes:ZvBQacDCX5Q116NmXbeZYGZU#team-blockchain
