add filter in order to not send message for every single successed build

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,7 @@ script:
 
 notifications:
   slack:
+      on_success: change
+      on_failure: always
       rooms:
         - sqlinantes:ZvBQacDCX5Q116NmXbeZYGZU#team-blockchain
