Fix module dependencies bug + generate gradlew for submodules

--- a/ethereum-java-sample/build.gradle
+++ b/ethereum-java-sample/build.gradle
@@ -1,11 +1,14 @@
-version 'unspecified'
 
 apply plugin: 'java'
 
-repositories {
-    mavenCentral()
-}
+
 
 dependencies {
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
+    compile project(':ethereum-java-core')
+}
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '3.1'
 }
