--- a/build.gradle
+++ b/build.gradle
@@ -13,3 +13,7 @@ buildscript {
 task wrapper(type: Wrapper) {
     gradleVersion = '3.1'
 }
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
+}
