--- a/ethereum-java-core/build.gradle
+++ b/ethereum-java-core/build.gradle
@@ -10,7 +10,6 @@ task wrapper(type: Wrapper) {
     gradleVersion = '3.1'
 }
 
-
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
@@ -25,4 +24,12 @@ dependencies {
     sourceCompatibility = 1.7
     targetCompatibility = 1.7
 
+}
+
+sourceSets {
+    test {
+        resources {
+            exclude 'data/**'
+        }
+    }
 }
