--- a/ethereum-java-core/build.gradle
+++ b/ethereum-java-core/build.gradle
@@ -1,13 +1,52 @@
-apply plugin: 'java'
-
 buildscript {
     repositories {
         jcenter()
     }
 }
 
-assemble.doLast {
-    file('build/libs/ethereum-java-core.jar').renameTo("ethereum-java-core/build/libs/ethereum-java-core-dailybuild-${(new Date()).format('yyyyMMdd')}.jar")
+plugins {
+    id "com.jfrog.bintray" version "1.7.1"
+}
+
+bintray {
+    user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
+    key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY')
+    publications = ['EthJavaMavenPublication']
+    dryRun = false //Whether to run this as dry-run, without deploying
+    publish = true //If version should be auto published after an upload
+    override = true
+    pkg {
+        repo = 'ethereum-java'
+        name = 'ethereum-java-core'
+        userOrg = 'sqli-nantes'
+        licenses = ['MIT']
+        labels = ['ethereum', 'java', 'blockchain']
+        vcsUrl = 'https://github.com/sqli-nantes/ethereum-java/ethereum-java-core/'
+        version {
+            name = '0.1.' + (new Date()).format('yyyyMMdd')
+            desc = 'Ethereum-Java library'
+            released  = new Date()
+            vcsTag = '0.1.' +(new Date()).format('yyyyMMdd')
+        }
+    }
+}
+
+apply plugin: 'java'
+apply plugin: "maven-publish"
+
+publishing {
+    publications {
+        EthJavaMavenPublication(MavenPublication) {
+            from components.java
+            artifact sourceJar
+            pom.withXml {
+                asNode().appendNode('description', 'Ethereum Java library')
+            }
+            groupId 'com.sqli.ethereum-java'
+            artifactId 'ethereum-java-core'
+            version '0.1.' + (new Date()).format('yyyyMMdd')
+        }
+    }
 }
 
 task wrapper(type: Wrapper) {
@@ -37,3 +76,24 @@ sourceSets {
     }
 }
 
+
+task sourceJar(type: Jar) {
+    from sourceSets.main.allJava
+    classifier "sources"
+}
+
+// custom tasks for creating source/javadoc jars
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+// add javadoc/source jar tasks as artifacts
+artifacts {
+    archives sourcesJar, javadocJar
+}
