--- a/ethereum-java-core/build.gradle
+++ b/ethereum-java-core/build.gradle
@@ -9,8 +9,9 @@ plugins {
 }
 
 bintray {
-    user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
-    key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY')
+    user = project.hasProperty('BINTRAY_USER') ? project.property('BINTRAY_USER') : System.getenv('BINTRAY_USER')
+//    key = project.hasProperty('BINTRAY_API_KEY') ? project.property('BINTRAY_API_KEY') : System.getenv('BINTRAY_API_KEY')
+    key = "a4c0bf1077679aa5faefd2e46f84295982d251a7"
     publications = ['EthJavaMavenPublication']
     dryRun = false //Whether to run this as dry-run, without deploying
     publish = true //If version should be auto published after an upload
@@ -60,7 +61,7 @@ dependencies {
     testCompile 'pl.pragmatists:JUnitParams:1.0.5'
     compile 'io.reactivex:rxjava:1.1.6'
     compile 'com.google.code.gson:gson:2.7'
-    compile 'org.json:json:20160810'
+//    compile 'org.json:json:20160810'
 
     sourceCompatibility = 1.7
     targetCompatibility = 1.7
