--- a/ethereum-java-core/build.gradle
+++ b/ethereum-java-core/build.gradle
@@ -10,8 +10,7 @@ plugins {
 
 bintray {
     user = project.hasProperty('BINTRAY_USER') ? project.property('BINTRAY_USER') : System.getenv('BINTRAY_USER')
-//    key = project.hasProperty('BINTRAY_API_KEY') ? project.property('BINTRAY_API_KEY') : System.getenv('BINTRAY_API_KEY')
-    key = "a4c0bf1077679aa5faefd2e46f84295982d251a7"
+    key = project.hasProperty('BINTRAY_API_KEY') ? project.property('BINTRAY_API_KEY') : System.getenv('BINTRAY_API_KEY')
     publications = ['EthJavaMavenPublication']
     dryRun = false //Whether to run this as dry-run, without deploying
     publish = true //If version should be auto published after an upload
